I've changed one button in password.html

--- a/appGen/templates/appGen/password.html
+++ b/appGen/templates/appGen/password.html
@@ -5,6 +5,6 @@
   <h2 class="alert alert-success">{{ password }}</h2>
   <div>
     <a href="{% url 'password' %}" class="btn btn-secondary">Refresh</a>
-    <a href="{% url 'home' %}" class="btn btn-info">Home</a>
+    <a href="{% url 'home' %}" class="btn btn-warning">Home</a>
   </div>
 </div>
